Add core source code, documentation, and configuration files
- Add main source code (src/, backend/src/)
- Add documentation and guides
- Add configuration files (astro, tailwind, etc.)
- Exclude sensitive files (databases, logs, temp files)

--- a/docs/项目架构开发文档.md
+++ b/docs/项目架构开发文档.md
@@ -1,8 +1,14 @@
-# 越南医疗整形项目 - 项目架构开发文档
+# 越南医疗整形项目 - 项目架构开发文档 v2.0
+
+**版本**: v2.0 完整版  
+**最后更新**: 2025-10-26  
+**状态**: ✅ 生产环境运行中
+
+---
 
 ## 📋 文档概述
 
-本文档详细说明越南医疗整形项目的完整技术架构，包括系统层次、技术选型、数据流向、部署架构等，帮助开发者快速理解项目的整体设计。
+本文档详细说明越南医疗整形项目的完整技术架构，采用**双数据库架构**，集成了**三大智能体系统**（DQA、翻译智能体、质量检查智能体），包括系统层次、技术选型、数据流向、部署架构等，帮助开发者快速理解项目的整体设计。
 
 ## 🌐 项目基本信息
 
@@ -11,11 +17,13 @@
 | **项目名称** | 越南医疗整形平台 (Vietnam Medical Beauty Platform) |
 | **官方域名** | https://vietbeauty.top |
 | **服务器IP** | 47.237.79.9 |
-| **项目版本** | v1.3.0 |
+| **项目版本** | v2.0 |
 | **上线日期** | 2024年10月 |
-| **最后更新** | 2025年10月10日 |
+| **最后更新** | 2025年10月26日 |
+| **数据库架构** | 双数据库 (frontend + medical) |
+| **智能体系统** | 三大智能体协同工作 |
 
-## 🏗️ 整体系统架构
+## 🏗️ 双数据库 + 三大智能体架构
 
 ### 完整架构图
 
@@ -63,6 +71,7 @@
 │  │  │  - sharing.astro │  │  │  │  │  │  - knowledge     │  │  │
 │  │  │  - knowledge     │  │  │  │  │  │  - hospital      │  │  │
 │  │  │  - reviews.astro │  │  │  │  │  │  - webhook       │  │  │
+│  │  │  - dqa           │  │  │
 │  │  │  - services      │  │  │  │  │  └──────────────────┘  │  │
 │  │  │  - contact       │  │  │  │  │                        │  │
 │  │  └──────────────────┘  │  │  │  │  ┌──────────────────┐  │  │
@@ -87,22 +96,218 @@
                                                   │
                                                   ▼
                               ┌──────────────────────────────────┐
-                              │      数据持久层                   │
+                              │      双数据库架构                 │
                               │  ┌────────────────────────────┐  │
-                              │  │   SQLite Database          │  │
-                              │  │   (medical.db)             │  │
-                              │  │                            │  │
-                              │  │  Tables:                   │  │
+                              │  │  前端数据库 (database.sqlite) │  │
                               │  │  - user_shares (用户分享)  │  │
-                              │  │  - knowledge (知识问答)    │  │
+                              │  │  - knowledge (越南语问答)  │  │
                               │  │  - hospitals (医院信息)    │  │
                               │  │  - services (服务内容)     │  │
                               │  │  - contacts (联系记录)     │  │
                               │  └────────────────────────────┘  │
-                              │                                  │
-                              │  备份: data/backup/              │
+                              │  ┌────────────────────────────┐  │
+                              │  │  训练数据库 (medical.db)   │  │
+                              │  │  - knowledge (1,829条中文) │  │
+                              │  │  - hospitals (医院基础)    │  │
+                              │  │  - 用于AI训练和翻译        │  │
+                              │  └────────────────────────────┘  │
+                              └──────────────────────────────────┘
+                                                  │
+                                                  ▼
+                              ┌──────────────────────────────────┐
+                              │      三大智能体系统               │
+                              │  ┌────────────────────────────┐  │
+                              │  │  DQA系统 (v1.5.0)         │  │
+                              │  │  - 122家医院数据           │  │
+                              │  │  - 6种问答类型             │  │
+                              │  │  - 15分钟自动生成          │  │
+                              │  │  - 生成越南语问答          │  │
+                              │  └────────────────────────────┘  │
+                              │  ┌────────────────────────────┐  │
+                              │  │  翻译智能体 (v3.0)        │  │
+                              │  │  - 1,829条中文问答        │  │
+                              │  │  - 5大分类均匀分布        │  │
+                              │  │  - 100%纯越南语保证       │  │
+                              │  │  - 5次重试机制            │  │
+                              │  └────────────────────────────┘  │
+                              │  ┌────────────────────────────┐  │
+                              │  │  质量检查智能体 (v1.0)     │  │
+                              │  │  - 5维度质量检查           │  │
+                              │  │  - 自动修正问题            │  │
+                              │  │  - 质量评分系统            │  │
+                              │  │  - 修改历史追踪            │  │
+                              │  └────────────────────────────┘  │
                               └──────────────────────────────────┘
 ```
+
+---
+
+## 🤖 三大智能体系统详解
+
+### 系统概览
+
+本项目采用**三大智能体协同工作**的架构，实现医美知识库的自动化生成、翻译和质量保证：
+
+```
+┌─────────────────────────────────────────────────────────────┐
+│                    三大智能体协同架构                        │
+└─────────────────────────────────────────────────────────────┘
+
+前端展示层 (越南语)
+    │
+    ├─→ database.sqlite (前端数据库)
+    │   ├─ user_shares (用户分享)
+    │   ├─ knowledge (越南语问答)
+    │   ├─ hospitals (医院信息)
+    │   └─ 其他前端表
+    │
+    └─→ 用户看到的内容
+
+三大智能体系统
+    │
+    ├─→ DQA系统 (JavaScript)
+    │   ├─ 数据源: 122家医院
+    │   ├─ 功能: 生成医院问答
+    │   ├─ 输出: 越南语问答
+    │   └─ 频率: 每15分钟1条
+    │
+    ├─→ 翻译智能体 (Python)
+    │   ├─ 数据源: medical.db (1,829条中文)
+    │   ├─ 功能: 中文→越南语翻译
+    │   ├─ 输出: 100%纯越南语
+    │   └─ 频率: 每15分钟1条
+    │
+    └─→ 质量检查智能体 (Python)
+        ├─ 数据源: database.sqlite
+        ├─ 功能: 检查和修正质量
+        ├─ 输出: 优化后的问答
+        └─ 频率: 手动/定期
+
+训练数据库 (医生/管理员专用)
+    │
+    └─→ medical.db (医院系统)
+        ├─ knowledge (1,829条中文问答)
+        ├─ hospitals (医院基本信息)
+        └─ 用于AI训练和翻译
+```
+
+### 智能体对比表
+
+| 特性 | DQA系统 | 翻译智能体 | 质量检查智能体 |
+|------|--------|----------|----------------|
+| **版本** | v1.5.0 | v3.0 | v1.0 |
+| **脚本文件** | `backend/src/dqa/dqaGenerator.js` | `scripts/qa_translator_agent.py` | `scripts/qa_quality_checker.py` |
+| **主要功能** | 生成医院问答 | 翻译中文为越南语 | 检查和修正质量问题 |
+| **数据源** | 122家医院 | medical.db (1,829条) | database.sqlite |
+| **输出语言** | 越南语 | 越南语 (100%纯) | 越南语 (修正) |
+| **运行频率** | 每15分钟1条 | 每15分钟1条 | 手动触发/定期检查 |
+| **日产量** | 96条/天 | 96条/天 | 按需检查 |
+| **使用技术** | 模板+随机 | LLM翻译 | LLM检查修正 |
+| **质量保证** | 拟人化表达 | 均匀分布 | 自动修正问题 |
+
+### 1. DQA系统 (v1.5.0)
+
+**技术栈**: JavaScript + Node.js + SQLite  
+**文件位置**: `/root/越南医疗整形项目/backend/src/dqa/`
+
+**核心特性**:
+- ✅ 基于122家医院真实数据
+- ✅ 6种问答类型 (资质、等级、服务、地址、联系、医生)
+- ✅ 15种开场白 + 10种结尾语 + 14种过渡词
+- ✅ 医院咨询专属分类
+- ✅ 15分钟自动生成1条问答
+
+**文件结构**:
+```
+backend/src/dqa/
+├── dqaGenerator.js        # 问答生成器
+├── dqaService.js          # 服务主控制器
+├── dqaScheduler.js        # 定时任务调度
+├── dqaRoutes.js           # API路由
+├── hospitalDataExtractor.js # 医院数据提取
+├── chainHospitalEnhancer.js # 连锁医院增强
+└── README.md              # 技术文档
+```
+
+**API端点**:
+```bash
+# 查看DQA状态
+curl http://localhost:5002/api/dqa/status
+
+# 手动生成10条问答
+curl -X POST http://localhost:5002/api/dqa/generate \
+  -H "Content-Type: application/json" \
+  -d '{"count": 10}'
+
+# 控制定时任务
+curl -X POST http://localhost:5002/api/dqa/scheduler/start
+```
+
+### 2. 翻译智能体 (v3.0)
+
+**技术栈**: Python + Doubao LLM API + Ark API  
+**文件位置**: `/root/越南医疗整形项目/scripts/qa_translator_agent.py`
+
+**核心特性**:
+- ✅ 1,829条中文问答翻译
+- ✅ 5大分类均匀分布 (丰胸、五官、产修、吸脂、牙矫)
+- ✅ 100%纯越南语保证 (中文检测+自动清理)
+- ✅ 5次重试机制
+- ✅ 智能循环，覆盖全部问答
+
+**分类映射**:
+```python
+{
+    "丰胸": "Thẩm mỹ ngực",
+    "五官": "Thẩm mỹ khuôn mặt", 
+    "产修": "Phục hồi sau sinh",
+    "吸脂": "Hút mỡ tạo dáng",
+    "牙矫": "Niềng răng"
+}
+```
+
+**运行方式**:
+```bash
+# 后台运行，连续生成100条
+nohup python scripts/qa_translator_agent.py --batch 100 > logs/translator.log 2>&1 &
+
+# 手动生成2条
+python scripts/qa_translator_agent.py --batch 2
+
+# 查看进度
+python scripts/qa_translator_agent.py --status
+```
+
+### 3. 质量检查智能体 (v1.0)
+
+**技术栈**: Python + Doubao LLM API  
+**文件位置**: `/root/越南医疗整形项目/scripts/qa_quality_checker.py`
+
+**核心特性**:
+- ✅ 5维度质量检查
+  * 准确性 (Accuracy)
+  * 一致性 (Consistency) 
+  * 完整性 (Completeness)
+  * 清晰度 (Clarity)
+  * 安全性 (Safety)
+- ✅ 自动修正问题
+- ✅ 质量评分 (0-100分)
+- ✅ 修改历史追踪
+- ✅ 批量检查支持
+
+**运行方式**:
+```bash
+# 检查100条随机问答
+python scripts/qa_quality_checker.py --batch 100
+
+# 检查特定分类
+python scripts/qa_quality_checker.py --category "Thẩm mỹ ngực" --batch 50
+
+# 查看检查历史
+python scripts/qa_quality_checker.py --report
+```
+
+---
 
 ## 📊 分层架构详解
 
