--- a/docs/数据库配置开发文档.md
+++ b/docs/数据库配置开发文档.md
@@ -1,13 +1,17 @@
-# 越南医疗整形项目 - 数据库配置开发文档
+# 越南医疗整形项目 - 数据库配置开发文档 v3.0
 
 ## 📋 目录
 
 - [项目概览](#项目概览)
+- [数据库分离说明](#数据库分离说明)
 - [系统架构](#系统架构)
 - [数据库模型](#数据库模型)
+- [数据生成方式](#数据生成方式)
 - [API接口](#api接口)
 - [N8N集成](#n8n集成)
 - [前端页面](#前端页面)
+- [重要警告](#重要警告)
+- [常见问题](#常见问题)
 - [部署运维](#部署运维)
 
 ---
@@ -21,55 +25,285 @@
 | **项目名称** | 越南医疗整形项目 |
 | **前端地址** | http://47.237.79.9:5001 |
 | **后端地址** | http://47.237.79.9:5002 |
-| **数据库** | SQLite3 |
+| **数据库类型** | SQLite3 |
+| **前端数据库** | database.sqlite（越南语网站数据） |
+| **智能体数据库** | medical.db（中文训练数据，独立） |
 | **前端框架** | Astro (SSR) |
 | **后端框架** | Node.js + Express |
 | **样式框架** | Tailwind CSS |
 
-### 数据统计
+### ⚠️ 重要提示
 
-| 模块 | 数量 |
-|------|------|
-| **医院** | 122家（5个城市） |
-| **知识问答** | 动态增长 |
-| **用户分享** | 动态增长 |
-| **服务项目** | 待添加 |
+**本项目有两个完全独立的数据库，用途不同，请勿混淆！**
+
+| 数据库 | 文件路径 | 用途 | 语言 | 状态 |
+|--------|----------|------|------|------|
+| **database.sqlite** | `/backend/data/database.sqlite` | 前端网站展示 | 越南语 | ✅ 在线 |
+| **medical.db** | `/backend/data/medical.db` | 智能体训练 | 中文 | ✅ 内部 |
+
+### 数据统计（最新）
+
+| 模块 | database.sqlite | medical.db |
+|------|-----------------|------------|
+| **医院** | 122家 | 122家（备份） |
+| **用户分享** | 367条 | 367条（备份） |
+| **知识问答** | DQA+智能体双重生成 | 1,831条中文数据 |
+| **服务/联系** | 3条 | - |
+
+### 知识问答生成系统
+
+**双重问答生成系统**：
+
+| 系统 | 用途 | 语言 | 频率 | 数据源 |
+|------|------|------|------|--------|
+| **DQA系统** | 前端展示 | 越南语 | 每15分钟1条 | 122家医院数据 |
+| **拟人化智能体** | 内部训练 | 中文 | 每20分钟1条 | 大模型生成 |
+
+---
+
+## 🔀 数据库分离说明
+
+### 分离目的
+
+为避免数据混淆，确保：
+1. 前端只展示越南语内容
+2. 智能体只处理中文数据
+3. 两者互不干扰，独立运作
+
+### 分离日期
+
+- **操作时间**: 2025-10-26
+- **操作原因**: 中文智能体数据误导入，覆盖了越南语问答数据
+- **分离方案**: 创建独立的前端数据库，保留智能体数据库
 
 ---
 
 ## 🏗️ 系统架构
 
+### 完整数据流向
+
 ```
-┌─────────────────────────────────────────────────┐
-│                   用户访问                       │
-│           http://47.237.79.9:5001               │
-└─────────────────────────────────────────────────┘
-                       ↓
-┌─────────────────────────────────────────────────┐
-│              前端服务 (Astro SSR)                │
-│                  Port: 5001                      │
-│  - /reviews (医院列表)                           │
-│  - /knowledge (知识问答)                         │
-│  - /sharing (用户分享)                           │
-└─────────────────────────────────────────────────┘
-                       ↓ API调用
-┌─────────────────────────────────────────────────┐
-│           后端服务 (Node.js + Express)           │
-│                  Port: 5002                      │
-│  - /api/hospitals                                │
-│  - /api/knowledge                                │
-│  - /api/user-shares                              │
-│  - /api/webhooks/n8n ← N8N集成入口              │
-└─────────────────────────────────────────────────┘
-                       ↓
-┌─────────────────────────────────────────────────┐
-│            数据库 (SQLite3)                      │
-│       /backend/data/medical.db                   │
-│  - hospitals (122条)                             │
-│  - knowledge (动态)                              │
-│  - user_shares (动态)                            │
-└─────────────────────────────────────────────────┘
+┌──────────────────────────────────────────────────────────┐
+│                    用户访问前端                           │
+│              http://47.237.79.9:5001                     │
+└──────────────────────────────────────────────────────────┘
+                          ↓
+┌──────────────────────────────────────────────────────────┐
+│                前端服务 (Astro SSR)                       │
+│                    Port: 5001                             │
+│  • /reviews (医院) • /knowledge (问答) • /sharing (分享) │
+└──────────────────────────────────────────────────────────┘
+                          ↓ API调用
+┌──────────────────────────────────────────────────────────┐
+│             后端服务 (Node.js + Express)                  │
+│                    Port: 5002                             │
+│  • GET /api/hospitals  • GET /api/knowledge               │
+│  • GET /api/user-shares                                   │
+│  • POST /api/user-shares/n8n (N8N接入)                   │
+└──────────────────────────────────────────────────────────┘
+                          ↓
+        ┌─────────────────────────────────────┐
+        │                                     │
+        ↓                                     ↓
+┌──────────────────┐              ┌──────────────────┐
+│ database.sqlite   │              │   medical.db     │
+│  (前端网站)      │              │  (智能体训练)    │
+│                  │              │                  │
+│ • hospitals      │              │ • knowledge      │
+│ • user_shares    │              │   (中文)         │
+│ • knowledge      │◄─────────────┤ • knowledge_     │
+│   (越南语)       │  DQA+智能体   │   history        │
+│ • services       │  双重生成     │                  │
+│ • contacts       │              │                  │
+└──────────────────┘              └──────────────────┘
+        ↑                                     ↑
+        │                                     │
+   用户分享+N8N                           拟人化智能体
+   (N8N输入)                            (Python脚本)
 ```
+
+### 双重问答生成系统
+
+```
+┌──────────────────────────────────────────────────────────┐
+│                    DQA系统 (v1.5.0)                       │
+│                                                          │
+│  ┌──────────────────────────────────────────────────┐   │
+│  │  拟人化优化特性：                                  │   │
+│  │  • 15种个性化开场白                               │   │
+│  │  • 10种温馨结尾语                                 │   │
+│  │  • 14种自然过渡词                                 │   │
+│  │  • 16个答案生成方法全覆盖                         │   │
+│  └──────────────────────────────────────────────────┘   │
+│                                                          │
+│  频率：每15分钟1条                                       │
+│  语言：越南语                                            │
+│  数据源：122家医院真实数据                               │
+│  输出：database.sqlite → 前端展示                        │
+└──────────────────────────────────────────────────────────┘
+                                ↓
+┌──────────────────────────────────────────────────────────┐
+│                拟人化问答生成智能体                        │
+│                                                          │
+│  ┌──────────────────────────────────────────────────┐   │
+│  │  技术栈：                                        │   │
+│  │  • Doubao-Seed-1.6-flash (豆包Flash模型)         │   │
+│  │  • Volces Ark API                                │   │
+│  │  • Python 3                                      │   │
+│  └──────────────────────────────────────────────────┘   │
+│                                                          │
+│  频率：每20分钟1条                                       │
+│  语言：中文                                              │
+│  数据源：大模型生成                                       │
+│  输出：medical.db → 智能体训练                           │
+└──────────────────────────────────────────────────────────┘
+```
+
+---
+
+## 🤖 数据生成方式
+
+### 1. 医院数据 (hospitals)
+
+**数据来源**: 手工创建  
+**数据库**: `database.sqlite`  
+**数量**: 122家  
+**状态**: ✅ 完成
+
+**生成方式**:
+```javascript
+// 通过脚本批量添加
+node backend/src/scripts/add-hospitals.js
+```
+
+**特点**:
+- 一次性导入完成
+- 数据稳定，不常更新
+- 包含完整医院信息（服务、设施、认证等）
+
+---
+
+### 2. 用户分享 (user_shares)
+
+**数据来源**: N8N接口  
+**数据库**: `database.sqlite`  
+**数量**: 367条（持续增长）  
+**状态**: ✅ 运行中
+
+**生成方式**:
+```bash
+# 通过N8N专用接口提交
+POST http://47.237.79.9:5002/api/user-shares/n8n
+{
+  "title": "分享标题",
+  "content": "分享内容"
+}
+```
+
+**特点**:
+- N8N工作流自动提交
+- 智能识别手术类型
+- 自动填充作者信息
+
+---
+
+### 3. 知识问答 (knowledge) - ⭐ 重点
+
+#### 3.1 DQA系统 - 前端越南语问答
+
+**数据来源**: DQA自动生成（v1.5.0拟人化优化）  
+**语言**: 越南语  
+**数量**: 动态增长  
+**状态**: ✅ 自动化运行
+
+**DQA系统说明**:
+
+| 属性 | 值 |
+|------|-----|
+| **全称** | Dynamic Q&A (动态问答系统) |
+| **功能** | 自动生成越南语医院问答 |
+| **数据源** | 122家医院数据 |
+| **生成频率** | 每15分钟1条 |
+| **每日产量** | 96条问答 |
+| **每月产量** | ~2,880条问答 |
+
+**拟人化优化特性**:
+- ✅ 15种个性化开场白
+- ✅ 10种温馨结尾语
+- ✅ 14种自然过渡词
+- ✅ 16个答案生成方法全覆盖
+
+**问答类型**:
+1. 医院资质问答
+2. 医院等级问答
+3. 医院服务问答
+4. 医院地址问答
+5. 医院联系方式问答
+6. 医生团队问答
+
+**生成示例**:
+```json
+{
+  "question": "Bệnh viện FV Hospital có giấy phép hợp pháp không?",
+  "answer": "Chào bạn! Mình rất vui được tư vấn cho bạn về giấy phép của Bệnh viện FV Hospital.\n\nBệnh viện FV Hospital có đầy đủ giấy phép hoạt động... Nói thêm là, giấy phép được gia hạn định kỳ và tuân thủ các quy định hiện hành. Hy vọng thông tin này hữu ích cho bạn nhé!",
+  "category": "Tư vấn bệnh viện",
+  "source": "dqa"
+}
+```
+
+#### 3.2 拟人化问答生成智能体 - 中文训练数据
+
+**数据来源**: 大模型自动生成  
+**语言**: 中文  
+**数量**: 1,831条（持续增长）  
+**状态**: ✅ 自动化运行
+
+**技术栈**:
+- **大模型**: Doubao-Seed-1.6-flash (豆包Flash模型)
+- **API**: Volces Ark API
+- **数据库**: SQLite3
+- **语言**: Python 3
+
+**生成特点**:
+- ✅ 拟人化表达，语气温暖、专业、有亲和力
+- ✅ 患者视角问题，贴近真实咨询场景
+- ✅ 专业医学知识，通俗易懂的解释
+- ✅ 人文关怀，贴心建议和注意事项
+
+**分类覆盖**:
+- 丰胸: 381条
+- 五官: 500条
+- 产修: 201条
+- 吸脂: 298条
+- 牙矫: 449条
+
+**生成示例**:
+```json
+{
+  "question": "医生，我生完宝宝快5个月了，肚子还是松垮垮的，摸起来中间那块有点'空落落'的，还有那些红印子（妊娠纹）也没消，我想做产后修复，但又怕动刀子疼，也担心对喂奶有影响，是不是得躺很久才能恢复啊？",
+  "answer": "亲爱的，刚当妈妈既要照顾宝宝又想恢复身体，肯定特别辛苦吧，肚子松、有妊娠纹确实会让你没自信～ 产后修复其实是帮身体'回到正轨'的过程，不用怕，咱们一步一步来～",
+  "category": "产修",
+  "source": "ai_agent"
+}
+```
+
+**运行方式**:
+```bash
+# 快速测试
+python3 scripts/qa_generator_agent.py --once
+
+# 后台运行（每20分钟生成1条）
+nohup python3 scripts/qa_generator_agent.py --interval 20 > logs/qa_generator_background.log 2>&1 &
+```
+
+### 数据生成总结
+
+| 模块 | 来源 | 方式 | 频率 | 语言 | 数据库 |
+|------|------|------|------|------|--------|
+| 医院 | 手工 | 脚本导入 | 一次性 | 越南语 | database.sqlite |
+| 用户分享 | N8N | API接口 | 实时 | 越南语 | database.sqlite |
+| 知识问答（前端） | DQA | 自动生成 | 每15分钟 | 越南语 | database.sqlite |
+| 知识问答（智能体） | 大模型 | 自动生成 | 每20分钟 | 中文 | medical.db |
 
 ---
 
@@ -293,6 +527,43 @@
 }
 ```
 自动填充：author_name="匿名用户", surgery_type=智能识别, rating=5
+
+---
+
+## 🚨 重要警告
+
+### ❌ 禁止操作
+
+1. **不要混淆数据库**
+   - 前端永远使用 `database.sqlite`
+   - 智能体永远使用 `medical.db`
+
+2. **不要交叉导入**
+   - ❌ 不要将 `medical.db` 的中文数据导入 `database.sqlite`
+   - ❌ 不要将 `database.sqlite` 的数据导入 `medical.db`
+
+3. **不要在前端展示中文数据**
+   - 前端只展示越南语内容
+
+4. **不要用智能体处理前端数据**
+   - 智能体只处理 `medical.db` 的中文数据
+
+5. **不要手动修改DQA生成的问答**
+   - DQA系统自动运行，手动修改会被覆盖
+
+6. **不要停止智能体服务**
+   - 智能体每20分钟生成1条中文问答，停止会影响训练数据
+
+### ✅ 正确操作
+
+1. **前端数据操作**
+   - 用户分享：通过N8N接口提交到 `database.sqlite`
+   - 医院数据：通过脚本批量导入到 `database.sqlite`
+   - 知识问答：由DQA自动生成到 `database.sqlite`
+
+2. **智能体数据操作**
+   - 中文问答：由拟人化智能体自动生成到 `medical.db`
+   - 训练数据：仅供内部AI训练使用
 
 ---
 
@@ -950,11 +1221,12 @@ cd /root/越南医疗整形项目
 │   │   │   ├── UserShare.js
 │   │   │   └── index.js
 │   │   ├── scripts/           # 数据脚本
-│   │   │   └── insert-hospitals.js
+│   │   │   └── add-hospitals.js
 │   │   ├── utils/             # 工具函数
 │   │   └── server.js          # 服务入口
 │   ├── data/
-│   │   └── medical.db         # SQLite数据库
+│   │   ├── database.sqlite    # 前端越南语网站数据库
+│   │   └── medical.db         # 智能体中文训练数据库
 │   └── package.json
 ├── src/                       # 前端代码
 │   ├── pages/
@@ -971,9 +1243,16 @@ cd /root/越南医疗整形项目
 │       └── api.js             # API调用工具
 ├── docs/                      # 文档
 │   ├── 数据库配置开发文档.md  # 本文档
-│   ├── 知识问答功能配置完成.md
-│   ├── 用户分享功能配置完成.md
-│   └── 医院详细信息更新说明.md
+│   ├── 数据库配置完整文档.md  # 完整文档
+│   ├── DQA拟人化优化总结-v1.5.0.md
+│   ├── 拟人化问答生成智能体使用指南.md
+│   └── 知识问答功能配置完成.md
+├── scripts/                   # 脚本
+│   ├── qa_generator_agent.py # 拟人化问答生成智能体
+│   └── test-personalized-dqa.js # DQA拟人化测试脚本
+├── logs/                      # 日志
+│   ├── qa_generator.log       # 智能体运行日志
+│   └── qa_generator_background.log # 智能体后台日志
 ├── deploy.sh                  # 部署脚本
 └── package.json
 ```
@@ -1140,7 +1419,80 @@ curl http://47.237.79.9:5002/api/knowledge
 
 ---
 
-**文档版本**: v1.0  
-**最后更新**: 2025-10-10  
-**维护者**: 开发团队
+## ❓ 常见问题
+
+### Q1: 知识问答数据从哪来？
+**A**: 知识问答由**双重系统**生成：
+- **DQA系统**: 每15分钟生成1条越南语医院问答，基于122家医院真实数据，存储到 `database.sqlite`，前端展示
+- **拟人化智能体**: 每20分钟生成1条中文医美问答，基于大模型生成，存储到 `medical.db`，仅供内部训练
+
+### Q2: 如何查看DQA生成进度？
+**A**: 访问 `http://localhost:5002/api/dqa/stats` 查看统计，或查看数据库：
+```bash
+sqlite3 /root/越南医疗整形项目/backend/data/database.sqlite \
+  "SELECT COUNT(*) FROM knowledge WHERE source='dqa';"
+```
+
+### Q3: 如何查看智能体生成进度？
+**A**: 查看智能体日志和数据库：
+```bash
+# 查看智能体日志
+tail -f /root/越南医疗整形项目/logs/qa_generator.log
+
+# 查看最近生成的中文问答
+sqlite3 /root/越南医疗整形项目/backend/data/medical.db \
+  "SELECT COUNT(*) FROM knowledge WHERE created_at > datetime('now', '-1 day');"
+```
+
+### Q4: 用户分享数据如何添加？
+**A**: 通过N8N接口提交：
+```bash
+curl -X POST http://47.237.79.9:5002/api/user-shares/n8n \
+  -H "Content-Type: application/json" \
+  -d '{"title":"标题","content":"内容"}'
+```
+
+### Q5: 两个数据库有什么区别？
+**A**: 
+- `database.sqlite`: 前端越南语网站数据，用户可见，包含DQA生成的越南语问答
+- `medical.db`: 后端中文智能体数据，仅供AI训练，用户不可见，包含智能体生成的中文问答
+
+### Q6: 如何启动/停止智能体服务？
+**A**:
+```bash
+# 启动智能体（后台运行）
+nohup python3 scripts/qa_generator_agent.py --interval 20 > logs/qa_generator_background.log 2>&1 &
+
+# 停止智能体
+ps aux | grep qa_generator_agent
+kill <PID>
+```
+
+### Q7: 如何备份数据？
+**A**:
+```bash
+# 备份前端数据库
+cp /root/越南医疗整形项目/backend/data/database.sqlite \
+   /root/越南医疗整形项目/backend/data/database.sqlite.$(date +%Y%m%d).bak
+
+# 备份智能体数据库
+cp /root/越南医疗整形项目/backend/data/medical.db \
+   /root/越南医疗整形项目/backend/data/medical.db.$(date +%Y%m%d).bak
+```
+
+### Q8: DQA和智能体生成的问答有什么区别？
+**A**:
+- **DQA问答**: 基于医院真实数据，越南语，拟人化表达（v1.5.0优化），前端展示
+- **智能体问答**: 基于大模型生成，中文，高度拟人化，患者视角，仅供内部训练
+
+---
+
+**文档版本**: v3.0  
+**最后更新**: 2025-10-26  
+**维护者**: 开发团队  
+**重要更新**: 
+- ✅ 数据库分离完成
+- ✅ DQA+智能体双重问答生成系统
+- ✅ 完整的系统架构说明  
+**状态**: ✅ 生产环境运行中
 
